@@ -21,6 +21,10 @@ case class KeyValueWithTimestamp(key: Int, group: Long, value: String, timestamp
 case class KeyValueWithConversion(key: String, group: Int, value: String)
 case class CustomerId(id: String)
 
+class SuperKeyValue(val key: Int, val value: String) extends Serializable
+
+class SubKeyValue(k: Int, v: String, val group: Long) extends SuperKeyValue(k, v)
+
 class TableWriterSpec extends FlatSpec with Matchers with BeforeAndAfter with SharedEmbeddedCassandra with SparkTemplate {
 
   useCassandraConfig("cassandra-default.yaml.template")
@@ -30,7 +34,7 @@ class TableWriterSpec extends FlatSpec with Matchers with BeforeAndAfter with Sh
     session.execute("DROP KEYSPACE IF EXISTS write_test")
     session.execute("CREATE KEYSPACE IF NOT EXISTS write_test WITH REPLICATION = { 'class': 'SimpleStrategy', 'replication_factor': 1 }")
 
-    for (x <- 1 to 16) {
+    for (x <- 1 to 17) {
       session.execute(s"CREATE TABLE IF NOT EXISTS write_test.key_value_$x (key INT, group BIGINT, value TEXT, PRIMARY KEY (key, group))")
     }
 
@@ -394,6 +398,16 @@ class TableWriterSpec extends FlatSpec with Matchers with BeforeAndAfter with Sh
         row.getLong(1) should be (ts * 1000L + row.getInt(0) * 100L)
       })
     }
+  }
+
+  it should "write RDD of objects with inherited fields" in {
+    val col = Seq(
+      new SubKeyValue(1, "value1", 1L),
+      new SubKeyValue(2, "value2", 2L),
+      new SubKeyValue(3, "value3", 3L)
+    )
+    sc.parallelize(col).saveToCassandra("write_test", "key_value_17")
+    verifyKeyValueTable("key_value_17")
   }
 
 }
